Add CSS and JavaScript files to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Subtitle+1&family=Subtitle+2&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/style.css">
+
     <style>
         .content {
             margin: 5px;
@@ -214,5 +216,6 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c96216a310.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="script.js"></script>
 </body>
 </html>
