--- a/index.html
+++ b/index.html
@@ -19,33 +19,39 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-left border-right">
-        <div class="zxc container-fluid">
-            <img src="https://www.kalgeninnolab.co.id/frontend/web/images/kalgen-logo-home.png" alt="Logo Kalgen" width="130px">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
+    
     <div class="container border-left border-right">
+        <div class="d-flex justify-content-center">
+            <nav class="navbar navbar-expand-lg navbar-light col-lg-10">
+                <div class="zxc container-fluid">
+                    <img src="https://www.kalgeninnolab.co.id/frontend/web/images/kalgen-logo-home.png" alt="Logo Kalgen" width="130px">
+                    <a class="navbar-brand" href="#"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Program</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Calender</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">FAQ</a>
+                            </li>
+                        </ul>
+                        <div class="auth-button position-absolute end-0">
+                            <button class="mx-3" style="border:solid 2px #0b6c50; color: #0b6c50; background-color: #FFFFFF; font-weight: 600; padding: .5rem 1.5rem; border-radius: 3rem;">Sign Up</button>
+                            <button class="" style="border:solid 2px #0b6c50; color: #FFFFFF; background-color: #0b6c50; font-weight: 600; padding: .5rem 1.5rem; border-radius: 3rem;">Login</button>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
         <div class="content">
             <div class="row col-md-12">
                 <div class="row col-md-5">
