--- a/index.html
+++ b/index.html
@@ -114,20 +114,25 @@
                     </div>
                 </div>
             </div>
-            <br><br>
-            <div class="col-md-12" style="background:#F2F8F2;border-radius:32px;">
-                <p class="mb-3" style="color:#238655;font-family:'Subtitle 1',sans-serif;font-size:18px;font-weight:800;">#KALGENACADEMIA</p>
-                <p style="width:512px;height:88px;font-family:'Manrope';font-style:normal;font-weight:800;font-size:32px;line-height:44px;letter-spacing:-.02em;color:#2A2A2A;flex:none;order:1;align-self:stretch;flex-grow:0;">Meet the Experts in Their Field and Expand Your Horizons.</p>
-                <br>
+           
+        </div>
+    </div>
+        <div class="col-md-12" style="background: #f2f8f2;margin-top: -2rem;position: absolute; z-index: -1; padding: 3rem;">
+            <p class="mb-3" style="color:#238655;font-family:'Subtitle 1',sans-serif;font-size:18px;font-weight:800;">#KALGENACADEMIA</p>
+            <p style="width:512px;height:88px;font-family:'Manrope';font-style:normal;font-weight:800;font-size:32px;line-height:44px;letter-spacing:-.02em;color:#2A2A2A;flex:none;order:1;align-self:stretch;flex-grow:0;">Meet the Experts in Their Field and Expand Your Horizons.</p>
+            <br>
+            <div>
                 <div>
-                    <div>
-                        <div class="swiper">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide" style="justify-content: center;">
+                    <div class="swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide" style="justify-content: center;align-items: center; ">
+                                <div class="d-flex justify-content-center">
                                     <div class="card" style="width: 25rem; border-radius: 8px; overflow: hidden;">
                                         <img src="https://s3-alpha-sig.figma.com/img/4177/316c/434c3f0887b54840c0480ff90249438b?Expires=1717977600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=TT1xKjEb20q86G-ycsWlDfMgYnwE2DBL4mE9k9W7G6vj8v8LZmjh1wy7v~riK1hptEjURFolT6yVt1aGB31IcN0xB9~THbzLkC9XZQBF4ip0NiTbZabVVX98rtjWCH5inRh21Pm22D6Xqthckd~rMv6Y8YsOnlevGHPcFnU-idtPfdEbHUCPw41gTmOKgpfa~c8M5SERi~g-jMF3Z~cpKSM6YSAs2HGz1x4Oye1vBaPvvRtHFLsvvTdLi24e2UHY4Wemi~YbfpeLq3RLQV~YWg9~YMsTsSF5FeYnWhQzxoQuge3l4B5sURT8ZdV1dUk5N-hBQCGtup~i~iBC8e9xsg__" class="card-img-top" alt="Foto 1">
                                     </div>
-                                    <div class="card" style="width: 20rem; background-color: blanchedalmond; z-index: 1;">
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <div class="card" style="width: 20rem; background-color: blanchedalmond;margin-top: -5rem;">
                                         <div class="card-body" style="padding: 1rem;">
                                             <div style="display: flex; align-items: center; margin-bottom: 0.5rem;">
                                                 <i class="fa-regular fa-clock" style="color:#0B6C50; width: 24px; height: 24px; margin-right: 0.5rem;"></i>
@@ -154,13 +159,13 @@
                         </div>
                     </div>
                 </div>
-                <br>
-                <a href="#" class="btn" style="background-color:#238655;color:#fff;height:64px;width:224px;font-family:'Subtitle 2',sans-serif;font-size:16px;font-weight:700;display:flex;align-items:center;justify-content:center;width:200px;height:60px;border-radius:50px;font-size:16px;cursor:pointer;">
-                    Discover More
-                </a>
             </div>
+            <br>
+            <a href="#" class="btn" style="background-color:#238655;color:#fff;height:64px;width:224px;font-family:'Subtitle 2',sans-serif;font-size:16px;font-weight:700;display:flex;align-items:center;justify-content:center;width:200px;height:60px;border-radius:50px;font-size:16px;cursor:pointer;">
+                Discover More
+            </a>
         </div>
-    </div>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c96216a310.js" crossorigin="anonymous"></script>
