--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div class="container border-left border-right">
         <div class="d-flex justify-content-center">
+        <!-- NAVBAR -->
             <nav class="navbar navbar-expand-lg navbar-light col-lg-10">
                 <div class="zxc container-fluid">
                     <img src="https://www.kalgeninnolab.co.id/frontend/web/images/kalgen-logo-home.png" alt="Logo Kalgen" width="130px">
@@ -45,6 +46,7 @@
                 </div>
             </nav>
         </div>
+        <!-- CONTENT -->
         <div class="content">
             <div class="row col-md-12">
                 <div class="row col-md-5">
@@ -151,6 +153,104 @@
             </div>
             <br>
             <a href="#" class="btn button-more-info">
+                Discover More
+            </a>
+        </div>
+    </div>        
+    <!-- ARTICLES -->
+    <div class="col-md-12 container articles-container">
+        <div class="container">
+            <div class="button-articles-video col-lg-3 d-flex justify-content-center ms-4">
+                <a  class="article-button" href="">Article</a>
+                <a class="video-button" href="">Video</a>
+            </div>
+            <div class="articles-title ms-4 mt-5">
+                <p class="mb-3 hastag">ARTICLES</p>
+                <p class="title">From practical tips to insightful trends</p>
+            </div>
+            <br>
+            <div>
+                <div>
+                    <div class="swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="d-flex justify-content-center">
+                                    <div class="card">
+                                        <img src="https://s3-alpha-sig.figma.com/img/4177/316c/434c3f0887b54840c0480ff90249438b?Expires=1717977600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=TT1xKjEb20q86G-ycsWlDfMgYnwE2DBL4mE9k9W7G6vj8v8LZmjh1wy7v~riK1hptEjURFolT6yVt1aGB31IcN0xB9~THbzLkC9XZQBF4ip0NiTbZabVVX98rtjWCH5inRh21Pm22D6Xqthckd~rMv6Y8YsOnlevGHPcFnU-idtPfdEbHUCPw41gTmOKgpfa~c8M5SERi~g-jMF3Z~cpKSM6YSAs2HGz1x4Oye1vBaPvvRtHFLsvvTdLi24e2UHY4Wemi~YbfpeLq3RLQV~YWg9~YMsTsSF5FeYnWhQzxoQuge3l4B5sURT8ZdV1dUk5N-hBQCGtup~i~iBC8e9xsg__" class="card-img-top" alt="Foto 1">
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <div class="card card-main">
+                                        <div class="card-body">
+                                            <div class="card-title">
+                                                <p>KalgenAcademia <strong class="fs-3">.</strong> Jan20</p>
+                                            </div>
+                                            <p class="text fs-4 mb-3">
+                                                Kalgen INNOLAB <br> Kenalkan Layanan Peme...
+                                            </p>
+                                            <div class="read-more">
+                                                <a class="link" href="#">
+                                                    Read More
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="d-flex justify-content-center">
+                                    <div class="card">
+                                        <img src="https://s3-alpha-sig.figma.com/img/4177/316c/434c3f0887b54840c0480ff90249438b?Expires=1717977600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=TT1xKjEb20q86G-ycsWlDfMgYnwE2DBL4mE9k9W7G6vj8v8LZmjh1wy7v~riK1hptEjURFolT6yVt1aGB31IcN0xB9~THbzLkC9XZQBF4ip0NiTbZabVVX98rtjWCH5inRh21Pm22D6Xqthckd~rMv6Y8YsOnlevGHPcFnU-idtPfdEbHUCPw41gTmOKgpfa~c8M5SERi~g-jMF3Z~cpKSM6YSAs2HGz1x4Oye1vBaPvvRtHFLsvvTdLi24e2UHY4Wemi~YbfpeLq3RLQV~YWg9~YMsTsSF5FeYnWhQzxoQuge3l4B5sURT8ZdV1dUk5N-hBQCGtup~i~iBC8e9xsg__" class="card-img-top" alt="Foto 1">
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <div class="card card-main">
+                                        <div class="card-body">
+                                            <div class="card-title">
+                                                <p>KalgenAcademia <strong class="fs-3">.</strong> Jan20</p>
+                                            </div>
+                                            <p class="text fs-4 mb-3">
+                                                Kalgen INNOLAB <br> Kenalkan Layanan Peme...
+                                            </p>
+                                            <div class="read-more">
+                                                <a class="link" href="#">
+                                                    Read More
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="d-flex justify-content-center">
+                                    <div class="card">
+                                        <img src="https://s3-alpha-sig.figma.com/img/4177/316c/434c3f0887b54840c0480ff90249438b?Expires=1717977600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=TT1xKjEb20q86G-ycsWlDfMgYnwE2DBL4mE9k9W7G6vj8v8LZmjh1wy7v~riK1hptEjURFolT6yVt1aGB31IcN0xB9~THbzLkC9XZQBF4ip0NiTbZabVVX98rtjWCH5inRh21Pm22D6Xqthckd~rMv6Y8YsOnlevGHPcFnU-idtPfdEbHUCPw41gTmOKgpfa~c8M5SERi~g-jMF3Z~cpKSM6YSAs2HGz1x4Oye1vBaPvvRtHFLsvvTdLi24e2UHY4Wemi~YbfpeLq3RLQV~YWg9~YMsTsSF5FeYnWhQzxoQuge3l4B5sURT8ZdV1dUk5N-hBQCGtup~i~iBC8e9xsg__" class="card-img-top" alt="Foto 1">
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <div class="card card-main">
+                                        <div class="card-body">
+                                            <div class="card-title">
+                                                <p>KalgenAcademia <strong class="fs-3">.</strong> Jan20</p>
+                                            </div>
+                                            <p class="text fs-4 mb-3">
+                                                Kalgen INNOLAB <br> Kenalkan Layanan Peme...
+                                            </p>
+                                            <div class="read-more">
+                                                <a class="link" href="#">
+                                                    Read More
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <a href="#" class="btn button-more-info ms-4 mt-4">
                 Discover More
             </a>
         </div>
